--- a/custom_components/alfen_wallbox/services.yaml
+++ b/custom_components/alfen_wallbox/services.yaml
@@ -5,6 +5,13 @@ reboot_wallbox:
       description: Name(s) of entities to change.
       example: "alfen_wallbox.garage"
 
+logout_wallbox:
+  description: Manual logout on alfen wallbox
+  fields:
+    entity_id:
+      description: Name(s) of entities to change.
+      example: "alfen_wallbox.garage"
+
 set_current_limit:
   description: Set current charge limit
   fields:
